[package]
name = "firewallchecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet_rs = "0.4.0"
ipnet = "2.11.0"
csv = "1.3.1"
regex = "1.11.1"
argh = "0.1.13"
tokio = { version = "1.44.2", features = ["full"] }
